--- a/about/about.html
+++ b/about/about.html
@@ -11,5 +11,6 @@
 </head>
 <body>
     <h1>test</h1>
+    <h1>hi my name is jean-luc and i am a freelancer Webdesigner and Softwaredeveloper</h1>
 </body>
 </html>
