--- a/index.html
+++ b/index.html
@@ -17,13 +17,28 @@
                     <img src="images/arrow-right-alt-svgrepo-com.svg" alt="">
                 </div>
         </a>
-        
         <div class="line-toggle-detectionbox toggle-expanded">
             <span class="line-toggle"></span>
         </div>
     </nav>
     <div class="page-wrapper">
-        
+        <div class="hero-wrapper">
+            <h1><em>FREELANCE </em>WEB DESIGNER <em>&</em> SOFTWARE DEVELOPER</h1>
+            <div class="hero-wrapper-section-2">
+                <h3>FREELANCE WEB DESIGNER HARNESSING THE POWER OF DESIGN TO ACHIEVE ONLINE GOALS.</h3>
+                <div class="hero-wrapper-section-2-1">
+                    <p>I create successful digital presences for innovative startups and established businesses with cutting-edge UI/UX design and web development.</p>
+                    <a href="contact.html" class="contact">
+                        <p>Contact</p>
+                        <div class="contact-images">
+                            <img src="images/message-circle-lines-svgrepo-com.svg" alt="">
+                            <img src="images/arrow-right-alt-svgrepo-com.svg" alt="">
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
