Nav-expand started

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="normal">
     <nav>
         <a href="index.html" class="logo">JEAN-LUC MAKIOLA</a>
         <a href="contact.html" class="contact">
@@ -20,6 +20,41 @@
         <div class="line-toggle-detectionbox toggle-expanded">
             <span class="line-toggle"></span>
         </div>
+        <div class="nav-expand-container">
+            <ul class="nav-links-container">
+                <li class="nav-links">
+                    <div class="nav-link-titles">
+                        <a href="" class="nav-link-1"></a>
+                        <a href="" class="nav-link-2"></a>
+                    </div>
+                </li>
+                <li class="nav-links">
+                    <div class="nav-link-titles">
+                        <a href="" class="nav-link-1"></a>
+                        <a href="" class="nav-link-2"></a>
+                    </div>
+                </li>
+                <li class="nav-links">
+                    <div class="nav-link-titles">
+                        <a href="" class="nav-link-1">
+                        </a><a href="" class="nav-link-2"></a>
+                    </div>
+                </li>
+                <li class="nav-links">
+                    <div class="nav-link-titles">
+                        <a href="" class="nav-link-1">
+                        </a><a href="" class="nav-link-2"></a>
+                    </div>
+                </li>
+                <li class="nav-links2">
+                    <div class="nav-link-titles">
+                        <a href="" class="nav-link-1">
+                        </a><a href="" class="nav-link-2"></a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="backgroundblur"></div>
     </nav>
     <div class="page-wrapper">
         <div class="hero-wrapper">
