Nav desktop finished

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="normal">
     <nav>
-        <a href="index.html" class="logo">JEAN-LUC MAKIOLA</a>
+        <a href="index.html" class="logo">JEAN-LUC <em>MAKIOLA</em></a>
         <a href="contact.html" class="contact">
                 <p>Contact</p>
                 <div class="contact-images">
@@ -20,41 +20,61 @@
         <div class="line-toggle-detectionbox toggle-expanded">
             <span class="line-toggle"></span>
         </div>
-        <div class="nav-expand-container">
+        <div class="nav-expand-container nav-expanded">
             <ul class="nav-links-container">
                 <li class="nav-links">
                     <div class="nav-link-titles">
-                        <a href="" class="nav-link-1"></a>
-                        <a href="" class="nav-link-2"></a>
+                        <p href="index.html" class="nav-link-1">HOME</p>
+                        <p href="index.html" class="nav-link-2">HOME</p>
+                    </div>
+                    <div class="nav-link-arrow">
+                        <img class="nav-link-arrow-1" src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
+                        <img class="nav-link-arrow-2" src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
                     </div>
                 </li>
                 <li class="nav-links">
                     <div class="nav-link-titles">
-                        <a href="" class="nav-link-1"></a>
-                        <a href="" class="nav-link-2"></a>
+                        <p href="" class="nav-link-1">SERVICES</p>
+                        <p href="" class="nav-link-2">SERVICES</p>
+                    </div>
+                    <div class="nav-link-arrow">
+                        <img class="nav-link-arrow-1" src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
+                        <img class="nav-link-arrow-2" src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
                     </div>
                 </li>
                 <li class="nav-links">
                     <div class="nav-link-titles">
-                        <a href="" class="nav-link-1">
-                        </a><a href="" class="nav-link-2"></a>
+                        <p href="" class="nav-link-1">WORKS</p>
+                        <p href="" class="nav-link-2">WORKS</p>
+                    </div>
+                    <div class="nav-link-arrow">
+                        <img class="nav-link-arrow-1" src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
+                        <img class="nav-link-arrow-2"  src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
                     </div>
                 </li>
                 <li class="nav-links">
                     <div class="nav-link-titles">
-                        <a href="" class="nav-link-1">
-                        </a><a href="" class="nav-link-2"></a>
+                        <p href="" class="nav-link-1">ABOUT</p>
+                        <p href="" class="nav-link-2">ABOUT</p>
+                    </div>
+                    <div class="nav-link-arrow">
+                        <img class="nav-link-arrow-1" src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
+                        <img class="nav-link-arrow-2" src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
                     </div>
                 </li>
-                <li class="nav-links2">
+                <li href="contact.html" class="nav-links2">
                     <div class="nav-link-titles">
-                        <a href="" class="nav-link-1">
-                        </a><a href="" class="nav-link-2"></a>
+                        <p href="contact.html" class="nav-link-1">CONTACT</p>
+                        <p href="contact.html" class="nav-link-2">CONTACT</p>
+                    </div>
+                    <div class="nav-link-arrow">
+                        <img class="nav-link-arrow-1" src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
+                        <img class="nav-link-arrow-2" src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
                     </div>
                 </li>
             </ul>
         </div>
-        <div class="backgroundblur"></div>
+        <div class="backgroundblur blur-toggled"></div>
     </nav>
     <div class="page-wrapper">
         <div class="hero-wrapper">
