--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="normal">
+<body onload="init()" class="normal">
     <nav>
         <a href="index.html" class="logo">JEAN-LUC <em>MAKIOLA</em></a>
         <a href="contact.html" class="contact">
@@ -93,7 +93,57 @@
                 </div>
             </div>
         </div>
+        <div class="image-gallery">
+            <div class="image-gallery_col1">
+                <img src="images/gallery/pexels-andrea-p-coan-832982.jpg" alt="">
+                <img src="images/gallery/pexels-format-1029757 (1).jpg" alt="">
+                <img src="images/gallery/pexels-pixabay-35550.jpg" alt="">
+                <img src="images/gallery/pexels-tranmautritam-251225.jpg" alt="">
+            </div>
+            <div class="image-gallery_col2 columns column-reverce">
+                <img src="images/gallery/pexels-andrea-p-coan-832982.jpg" alt="">
+                <img src="images/gallery/pexels-format-1029757 (1).jpg" alt="">
+                <img src="images/gallery/pexels-pixabay-35550.jpg" alt="">
+                <img src="images/gallery/pexels-tranmautritam-251225.jpg" alt="">
+            </div>
+            <div class="image-gallery_col3">
+                <img src="images/gallery/pexels-andrea-p-coan-832982.jpg" alt="">
+                <img src="images/gallery/pexels-format-1029757 (1).jpg" alt="">
+                <img src="images/gallery/pexels-pixabay-35550.jpg" alt="">
+                <img src="images/gallery/pexels-tranmautritam-251225.jpg" alt="">
+            </div>
+        </div>
+        <div class="about-wrapper">
+            <div class="about-col1">
+                <div class="about-header">About me</div>
+                <div class="about-social-links">
+                    <p>SOCIAL LINKS</p>
+                    <div class="about-social-links-wrapper">
+                        <a class="about-social-link-1">
+                            <i class="fa-brands fa-instagram"></i>
+                            <p>Instagramm</p>
+                        </a>
+                        <a class="about-social-link-2">
+                            <i class="fa-brands fa-github"></i>
+                            <p>GitHub</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="about-col2">
+                <img src="images/placeholders/people-7035403__340.webp" alt="">
+            </div>
+            <div class="about-col3">
+               <div class="profile-pic"></div>
+            </div>
+            <div class="about-col4">
+                <p class="about-paragraph-1">Welcome my world! I am Daniel, a dedicated and creative freelance digital designer striving to create projects that I can be proud of. I am a member of the Awwwards young jury 2023, Webflow professional partner and I specialise in delivering digital services including bespoke web design and Webflow development.</p>
+                <p class="about-paragraph-2">With a passion for technology and a focus on web design and Webflow development, I create beautiful digital experiences that drive value for my clients and their customers. I believe in taking a collaborative approach to my work and I work closely with my clients to ensure that every project meets their unique needs and exceeds their expectations.</p>
+                <!--button to about page. content: "read more" style: sea contact-button -->
+            </div>
+        </div>
     </div>
     <script src="index.js"></script>
+    <script src="https://kit.fontawesome.com/4bc7b0c44c.js" crossorigin="anonymous"></script>
 </body>
 </html>
