--- a/index.html
+++ b/index.html
@@ -114,16 +114,16 @@
             </div>
         </div>
         <div class="about-wrapper">
+            <div class="about-header">About me</div>
             <div class="about-col1">
-                <div class="about-header">About me</div>
                 <div class="about-social-links">
                     <p>SOCIAL LINKS</p>
                     <div class="about-social-links-wrapper">
-                        <a class="about-social-link-1">
+                        <a href="https://www.instagram.com/jeanluc_makiola" class="about-social-link-1">
                             <i class="fa-brands fa-instagram"></i>
                             <p>Instagramm</p>
                         </a>
-                        <a class="about-social-link-2">
+                        <a href="https://github.com/Jean-LucMakiola" class="about-social-link-2">
                             <i class="fa-brands fa-github"></i>
                             <p>GitHub</p>
                         </a>
@@ -131,16 +131,16 @@
                 </div>
             </div>
             <div class="about-col2">
-                <img src="images/placeholders/people-7035403__340.webp" alt="">
-            </div>
-            <div class="about-col3">
+                 <div class="about-col2-1">
                <div class="profile-pic"></div>
             </div>
-            <div class="about-col4">
+            <div class="about-col2-2">
                 <p class="about-paragraph-1">Welcome my world! I am Daniel, a dedicated and creative freelance digital designer striving to create projects that I can be proud of. I am a member of the Awwwards young jury 2023, Webflow professional partner and I specialise in delivering digital services including bespoke web design and Webflow development.</p>
                 <p class="about-paragraph-2">With a passion for technology and a focus on web design and Webflow development, I create beautiful digital experiences that drive value for my clients and their customers. I believe in taking a collaborative approach to my work and I work closely with my clients to ensure that every project meets their unique needs and exceeds their expectations.</p>
                 <!--button to about page. content: "read more" style: sea contact-button -->
             </div>
+            </div>
+           
         </div>
     </div>
     <script src="index.js"></script>
