--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="init()" class="normal">
+<body class="normal">
+    <div class="backgroundblur blur-toggled"></div>
     <nav>
         <a href="index.html" class="logo">JEAN-LUC <em>MAKIOLA</em></a>
         <a href="contact.html" class="contact">
@@ -74,7 +75,7 @@
                 </li>
             </ul>
         </div>
-        <div class="backgroundblur blur-toggled"></div>
+        
     </nav>
     <div class="page-wrapper">
         <div class="hero-wrapper">
@@ -99,10 +100,16 @@
                 <img src="images/gallery/pexels-format-1029757 (1).jpg" alt="">
                 <img src="images/gallery/pexels-pixabay-35550.jpg" alt="">
                 <img src="images/gallery/pexels-tranmautritam-251225.jpg" alt="">
+                <img src="images/gallery/pexels-pixabay-35550.jpg" alt="">
+                <img src="images/gallery/pexels-tranmautritam-251225.jpg" alt="">
+                <img src="images/gallery/pexels-andrea-p-coan-832982.jpg" alt="">
+
             </div>
             <div class="image-gallery_col2 columns column-reverce">
                 <img src="images/gallery/pexels-andrea-p-coan-832982.jpg" alt="">
                 <img src="images/gallery/pexels-format-1029757 (1).jpg" alt="">
+                <img src="images/gallery/pexels-pixabay-35550.jpg" alt="">
+                <img src="images/gallery/pexels-tranmautritam-251225.jpg" alt="">
                 <img src="images/gallery/pexels-pixabay-35550.jpg" alt="">
                 <img src="images/gallery/pexels-tranmautritam-251225.jpg" alt="">
             </div>
@@ -111,13 +118,18 @@
                 <img src="images/gallery/pexels-format-1029757 (1).jpg" alt="">
                 <img src="images/gallery/pexels-pixabay-35550.jpg" alt="">
                 <img src="images/gallery/pexels-tranmautritam-251225.jpg" alt="">
+                <img src="images/gallery/pexels-pixabay-35550.jpg" alt="">
+                <img src="images/gallery/pexels-tranmautritam-251225.jpg" alt="">
+                <img src="images/gallery/pexels-andrea-p-coan-832982.jpg" alt="">
+
             </div>
         </div>
         <div class="about-wrapper">
-            <div class="about-header">About me</div>
+            <div class="about-header"></div>
+            <div class="about-header-2"></div>
             <div class="about-col1">
                 <div class="about-social-links">
-                    <p>SOCIAL LINKS</p>
+                    <p class="about-social-links-header">SOCIAL LINKS</p>
                     <div class="about-social-links-wrapper">
                         <a href="https://www.instagram.com/jeanluc_makiola" class="about-social-link-1">
                             <i class="fa-brands fa-instagram"></i>
@@ -141,6 +153,72 @@
             </div>
             </div>
            
+        </div>
+        <div class="work-wrapper">
+            <div class="work-header">
+                <div class="work-col1">
+                    <div class="work-title">selected work</div>
+                </div>
+                <div class="work-col2">
+                    <h1>A FEW <em>SELECTED WORKS</em></h1>
+                    <p>My web design projects showcases the exceptional work that I have delivered. Have a look into my portfolio, highlighting the diverse range of web design projects for various industries.</p>
+                </div>
+            </div>
+            <div class="work-project-wrapper">
+                <div class="work-project-wrapper-col1">
+                    <div class="work-project-1">
+                        <div class="work-project-image img-1">
+                            <div class="work-project-image-hovereffect">
+                                <img src="images/icons/arrow-right-33-black.svg" alt="">
+                                <i class="fa-regular fa-eye"></i>
+                            </div>
+                        </div>
+                        <div class="work-project-subtitle-wrapper">
+                            <div class="work-project-subtitle">Laurem Ipsum Website</div>
+                            <div class="button_view">View</div>
+                        </div>
+                    </div>
+                    <div class="work-project-2">                    
+                        <div class="work-project-image img-2">
+                            <div class="work-project-image-hovereffect">
+                                <img src="images/icons/arrow-right-33-black.svg" alt="">
+                                <i class="fa-regular fa-eye"></i>
+                            </div>
+                        </div>
+                        <div class="work-project-subtitle-wrapper">
+                            <div class="work-project-subtitle">Laurem Ipsum Website</div>
+                            <div class="button_view">View</div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="work-project-wrapper-col2">
+                    <div class="work-project-3 ">
+                        <div class="work-project-image img-3">
+                            <div class="work-project-image-hovereffect">
+                                <img src="images/icons/arrow-right-33-black.svg" alt="">
+                                <i class="fa-regular fa-eye"></i>
+                            </div>
+                        </div>
+                        <div class="work-project-subtitle-wrapper">
+                            <div class="work-project-subtitle">Laurem Ipsum Website</div>
+                            <div class="button_view">View</div>
+                        </div>
+                    </div>
+                    <div class="work-project-4">                    
+                        <div class="work-project-image img-4">
+                            <div class="work-project-image-hovereffect">
+                                <img src="images/icons/arrow-right-33-black.svg" alt="">
+                                <i class="fa-regular fa-eye"></i>
+                            </div>
+                        </div>
+                        <div class="work-project-subtitle-wrapper">
+                            <div class="work-project-subtitle">Laurem Ipsum Website</div>
+                            <div class="button_view">View</div>
+                        </div>
+                    </div>
+                </div> 
+            </div>
         </div>
     </div>
     <script src="index.js"></script>
