--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="backgroundblur blur-toggled"></div>
     <nav>
         <a href="index.html" class="logo">JEAN-LUC <em>MAKIOLA</em></a>
-        <a href="contact.html" class="contact">
-                <p>Contact</p>
-                <div class="contact-images">
-                    <img src="images/message-circle-lines-svgrepo-com.svg" alt="">
-                    <img src="images/arrow-right-alt-svgrepo-com.svg" alt="">
-                </div>
+        <a href="contact.html" class="contact_button">
+            <p>Contact</p>
+            <div class="contact_button-images">
+                <img src="images/icons/arrow-right-33.svg" alt="">
+                <img src="images/icons/message-white.svg" alt="">
+            </div>
         </a>
         <div class="line-toggle-detectionbox toggle-expanded">
             <span class="line-toggle"></span>
@@ -84,11 +84,11 @@
                 <h3>FREELANCE WEB DESIGNER HARNESSING THE POWER OF DESIGN TO ACHIEVE ONLINE GOALS.</h3>
                 <div class="hero-wrapper-section-2-1">
                     <p>I create successful digital presences for innovative startups and established businesses with cutting-edge UI/UX design and web development.</p>
-                    <a href="contact.html" class="contact">
+                    <a href="contact.html" class="contact_button">
                         <p>Contact</p>
-                        <div class="contact-images">
-                            <img src="images/message-circle-lines-svgrepo-com.svg" alt="">
-                            <img src="images/arrow-right-alt-svgrepo-com.svg" alt="">
+                        <div class="contact_button-images">
+                            <img src="images/icons/arrow-right-33.svg" alt="">
+                            <img src="images/icons/message-white.svg" alt="">
                         </div>
                     </a>
                 </div>
@@ -219,7 +219,134 @@
                     </div>
                 </div> 
             </div>
+            <div class="work-footer">
+                <div class="button_view">View all projects</div>
+            </div>
         </div>
+        <div class="expertise-wrapper">
+            <div class="expertise-col1">
+                <div>
+                    <div class="expertise-title">Expertise</div>
+                    <h3>HOW CAN <em style="font-style: normal ;">I HELP</em></h3>
+                    <p>I specialise in offering bespoke web design and Webflow development services to small and big businesses alike. My aim is to help businesses establish a strong online presence and connect with their target audience effectively.</p>
+                    <div class="expertise-links">
+                        <a href="contact.html" class="contact_button">
+                            <p>Read more</p>
+                            <div class="contact_button-images">
+                                <img src="images/icons/arrow-right-33.svg" alt="">
+                                <img src="images/icons/eye-svgrepo-com.svg" alt="">
+                            </div>
+                        </a>
+                        <a href="contact.html" class="contact_button">
+                            <p>Contact</p>
+                            <div class="contact_button-images">
+                                <img src="images/icons/arrow-right-33.svg" alt="">
+                                <img src="images/icons/message-white.svg" alt="">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="expertise-col2">
+                <ul>    
+                    <li class="expertise-card expertise-card1">
+                            <div class="expertise-card-row1">
+                                <div class="expertise-card-col1">
+                                    <div class="expertise-card-icon">
+                                        <img src="images/icons/code-1115-svgrepo-com.svg" alt="">
+                                    </div>
+                                </div>
+                                <div class="expertise-card-col2">
+                                    <h4 class="expertise-card-title">WEB DESIGN</h4>
+                                    <div class="expertise-card-traits">
+                                        <div class="expertise-card-trait1">UI/UX Design</div>
+                                        <div class="expertise-card-trait2">Re-designs</div>
+                                        <div class="expertise-card-trait3">Landing pages</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="expertise-card-row2">Starting a business can be challenging, but your website should not be one of them. That's where I come in. I provide thorough web design and Web development services so startups can get ahead on their way to reaching their online goals.</div>
+                    </li>
+                    <li class="expertise-card expertise-card2">
+                            <div class="expertise-card-row1">
+                                <div class="expertise-card-col1">
+                                    <div class="expertise-card-icon">
+                                        <img src="images/icons/web-development-svgrepo-com.svg" alt="">
+                                    </div>
+                                </div>
+                                <div class="expertise-card-col2">
+                                    <h4 class="expertise-card-title">WEB DEVELOPMENT</h4>
+                                    <div class="expertise-card-traits">
+                                        <div class="expertise-card-trait2">Optimisation</div>
+                                        <div class="expertise-card-trait1">Client-first</div>
+                                        <div class="expertise-card-trait3">Functionality</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="expertise-card-row2">Starting a business can be challenging, but your website should not be one of them. That's where I come in. I provide thorough web design and Web development services so startups can get ahead on their way to reaching their online goals.</div>
+                    </li>
+                    <li class="expertise-card expertise-card3">
+                        <div class="expertise-card-row1">
+                            <div class="expertise-card-col1">
+                                <div class="expertise-card-icon">
+                                    <img src="images/icons/rocket-svgrepo-com.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="expertise-card-col2">
+                                <h4 class="expertise-card-title">HELPING STARTUPS</h4>
+                                <div class="expertise-card-traits">
+                                    <div class="expertise-card-trait3">Visual identity</div>
+                                    <div class="expertise-card-trait2">Web design</div>
+                                    <div class="expertise-card-trait1">Web development</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="expertise-card-row2">Starting a business can be challenging, but your website should not be one of them. That's where I come in. I provide thorough web design and Web development services so startups can get ahead on their way to reaching their online goals.</div>
+                    </li>
+                    <li class="expertise-card expertise-card4">
+                        <div class="expertise-card-row1">
+                            <div class="expertise-card-col1">
+                                <div class="expertise-card-icon">
+                                    <img src="images/icons/app-connectivity-svgrepo-com.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="expertise-card-col2">
+                                <h4 class="expertise-card-title">WEBAPP DEVELOPMENT</h4>
+                                <div class="expertise-card-traits">
+                                    <div class="expertise-card-trait3">meticulousness</div>
+                                    <div class="expertise-card-trait1">front-end</div>
+                                    <div class="expertise-card-trait2">back-end</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="expertise-card-row2">
+                            <p>
+                                I create custom web applications tailored to the unique needs of businesses across various industries. With expertise in HTML, CSS, and JavaScript, my solutions are designed to streamline your business processes and help you achieve your goals effectively.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+                
+            </div>
+        </div>
+        <div class="contact-wrapper">
+            <div>
+                <div class="expertise-title">get in touch</div>
+            </div>    
+            <div>
+                <h3>HAVE AN IDEA?<br><em style="font-style: normal ;">LET'S DO IT TOGETHER!</em></h3>
+                <p>Don't put your creativity on hold and let's build a professional web experience which will put you above your competitors.</p>
+                <a href="contact.html" class="contact_button">
+                    <p>Contact</p>
+                    <div class="contact_button-images">
+                        <img src="images/icons/arrow-right-33-black.svg" alt="">
+                        <img src="images/icons/message-white.svg" alt="">
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="filler"></div>
     </div>
     <script src="index.js"></script>
     <script src="https://kit.fontawesome.com/4bc7b0c44c.js" crossorigin="anonymous"></script>
