legal pages set up and most pages base set up

--- a/about.html
+++ b/about.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Jean-Luc Makiola</title>
+    <title>About | Jean-Luc Makiola</title>
     <link rel="icon" href="images/logo.svg" type="image/png">
-    <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -81,40 +80,21 @@
         </div>
         
     </nav>
-    <div class="contact-page-wrapper">
-        <div class="contact-page-col1">
-            <div>
-                <h3>HAVE AN IDEA?<br><em style="font-style: normal ;">LET'S DO IT TOGETHER!</em></h3>
-                <p>Don't put your creativity on hold and let's build a professional web experience which will put you above your competitors.</p>
-                <ul>
-                    <li>
-                        <a href="mailto:makiolajeanluc@gmail.com">
-                            <div>
-                                <img src="images/icons/mail-svgrepo-com.svg" alt="">
-                            </div>
-                            <p>makiolajeanluc@gmail.com</p>
-                        </a>
-                        
-                    </li>
-                    <li>
-                        <a href="tel:+4917643207696">
-                            <div>
-                                <img src="images/icons/telephone-svgrepo-com.svg" alt="">
-                            </div>
-                            <p>+4917643207696</p>
-                        </a>
-                    </li>
-                    <li>
-                        <div>
-                            <img src="images/icons/location-svgrepo-com.svg" alt="">
-                        </div>
-                        <p>Brandenburg an der Havel, GER</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="contact-page-col2">
-            contact-form under Development
+    <h1 style="color: red;">Still under Development</h1>
+    <div class="contact-wrapper">
+        <div>
+            <div class="expertise-title">get in touch</div>
+        </div>    
+        <div>
+            <h3>HAVE AN IDEA?<br><em style="font-style: normal ;">LET'S DO IT TOGETHER!</em></h3>
+            <p>Don't put your creativity on hold and let's build a professional web experience which will put you above your competitors.</p>
+            <a href="contact.html" class="contact_button">
+                <p>Contact</p>
+                <div class="contact_button-images">
+                    <img src="images/icons/arrow-right-33-black.svg" alt="">
+                    <img src="images/icons/message-black.svg" alt="">
+                </div>
+            </a>
         </div>
     </div>
     <footer>
@@ -210,5 +190,6 @@
         </div>
     </footer>
     <script src="index.js"></script>
+    <script src="https://kit.fontawesome.com/4bc7b0c44c.js" crossorigin="anonymous"></script>
 </body>
 </html>
