--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Jean-Luc Makiola</title>
+    <link rel="icon" href="images/logo.svg" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="normal">
@@ -38,8 +39,8 @@
                 </li>
                 <li class="nav-links">
                     <div class="nav-link-titles nav-expanded">
-                        <a href="" class="nav-link-1">SERVICES</a>
-                        <a href="" class="nav-link-2">SERVICES</a>
+                        <a href="services.html" class="nav-link-1">SERVICES</a>
+                        <a href="services.html" class="nav-link-2">SERVICES</a>
                     </div>
                     <div class="nav-link-arrow">
                         <img class="nav-link-arrow-1" src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
@@ -48,8 +49,8 @@
                 </li>
                 <li class="nav-links">
                     <div class="nav-link-titles nav-expanded">
-                        <a href="" class="nav-link-1">WORKS</a>
-                        <a href="" class="nav-link-2">WORKS</a>
+                        <a href="works.html" class="nav-link-1">WORKS</a>
+                        <a href="works.html" class="nav-link-2">WORKS</a>
                     </div>
                     <div class="nav-link-arrow">
                         <img class="nav-link-arrow-1" src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
@@ -58,8 +59,8 @@
                 </li>
                 <li class="nav-links">
                     <div class="nav-link-titles nav-expanded">
-                        <a href="" class="nav-link-1">ABOUT</a>
-                        <a href="" class="nav-link-2">ABOUT</a>
+                        <a href="about.html" class="nav-link-1">ABOUT</a>
+                        <a href="about.html" class="nav-link-2">ABOUT</a>
                     </div>
                     <div class="nav-link-arrow">
                         <img class="nav-link-arrow-1" src="images/arrow-up-right-alt-svgrepo-com.svg" alt="">
@@ -439,8 +440,8 @@
         <div class="footer-outer">
             <p>© 2023 Jean-Luc Makiola. All right reserved.</p>
             <div>
-                <a href="">Privacy Policy</a>
-                <a href="">Terms & Conditions</a>
+                <a href="privacy.html">Privacy Policy</a>
+                <a href="terms_and_services.html">Terms & Conditions</a>
             </div>
             
         </div>
