--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               <div class="work-project-image img-1">
                 <div class="work-project-image-hovereffect">
                   <img
-                    src="images/Projects/mockup-of-a-woman-taking-her-iphone-12-pro-max-from-her-desk-m28885.png"
+                    src="images/icons/eye-svgrepo-com.svg"
                     alt="Doot ToDo-App"
                   />
                   <i class="fa-regular fa-eye"></i>
