--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
               <div class="work-project-image img-1">
                 <div class="work-project-image-hovereffect">
                   <img
-                    src="images/icons/eye-svgrepo-com.svg"
-                    alt="Doot ToDo-App"
+                    src="images/icons/arrow-right-33-black.svg"
+                    alt=""
                   />
                   <i class="fa-regular fa-eye"></i>
                 </div>
